<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_location"
        android:title="@string/menu_action_location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_location_on_white_24dp"/>
    <item
        android:id="@+id/action_date"
        android:title="@string/menu_action_date"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_today_white_24dp"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/menu_action_info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24dp"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_action_about"
        app:showAsAction="never"/>
</menu>